// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel snapshots should render Panel 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Panel"
    data-test-box=""
    data-test-color-picker-panel=""
  >
    <div
      class="css-1e2q934 Panel__header"
      data-test-box=""
    >
      <div
        class="css-gu5024 Tabs"
        data-test-tabs=""
      >
        <div
          active=""
          class="css-17z9djj Tabs__tab Tabs__tab--active Tabs__tab--disabled"
          data-test-tab="custom"
        >
          Custom
        </div>
      </div>
      <div
        class="css-1jnxvbp Icon Icon--clickable"
        data-test-icon="close"
        height="11"
        name="Close"
        width="11"
      />
    </div>
    <div
      class="ant-color-picker-slider-container"
    />
    <div
      class="css-175hdsd"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp ButtonIcon"
        data-test-button-icon="sampler"
        data-test-tooltip=""
      >
        <div
          class="css-1jnxvbp Icon Icon--neutral1"
          data-test-icon="sample"
          height="12"
          name="Sample"
          width="12"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Panel snapshots should render with active sampler 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Panel"
    data-test-box=""
    data-test-color-picker-panel=""
  >
    <div
      class="css-1e2q934 Panel__header"
      data-test-box=""
    >
      <div
        class="css-gu5024 Tabs"
        data-test-tabs=""
      >
        <div
          active=""
          class="css-17z9djj Tabs__tab Tabs__tab--active Tabs__tab--disabled"
          data-test-tab="custom"
        >
          Custom
        </div>
      </div>
      <div
        class="css-1jnxvbp Icon Icon--clickable"
        data-test-icon="close"
        height="11"
        name="Close"
        width="11"
      />
    </div>
    <div
      class="ant-color-picker-slider-container"
    />
    <div
      class="css-175hdsd"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp ButtonIcon ButtonIcon--selected"
        data-test-button-icon="sampler"
        data-test-tooltip=""
      >
        <div
          class="css-1jnxvbp Icon Icon--blue1"
          data-test-icon="sample"
          height="12"
          name="Sample"
          width="12"
        />
      </div>
      <div
        class="css-gjryq9 ColorSampler"
        data-test-box=""
        style="left: 15px; top: 15px;"
      >
        <div
          class="css-1kjclab ColorGridMask"
          data-test-box=""
          data-test-button="color-sampler"
        />
        <div
          class="css-1odrpt5 ColorGrid"
          data-test-box=""
        >
          <div
            class="css-fx1txq"
            data-test-box=""
          />
          <div
            class="css-tnkbza ColorGrid__picker-target-color"
            data-test-box=""
          />
          <div
            class="css-1s5h6lf"
            data-test-box=""
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1cj4ms"
            >
              <span
                class="ant-spin-dot-holder"
              >
                <span
                  class="ant-spin-dot ant-spin-dot-spin"
                >
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                  <i
                    class="ant-spin-dot-item"
                  />
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
